--- a/Client/package.json
+++ b/Client/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@types/node": "^24.3.1",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.11.0",
     "lucide-react": "^0.543.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
